fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -164,7 +164,8 @@ h1 {
   margin: 0; }
 
 html {
-  font-size: 125%; }
+  font-size: 125%;
+  overflow-x: hidden; }
 
 body {
   font-size: 1rem;
