--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -49,6 +49,7 @@ h1 {
 
 html {
     font-size: 125%;
+    overflow-x: hidden;
 }
 
 body {
